--- a/package.json
+++ b/package.json
@@ -1,21 +1,29 @@
 {
   "name": "nextjs-typescript-tailwindcss",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint src/**/*.{js,ts,tsx} --fix"
   },
   "dependencies": {
-    "next": "9.4.0",
+    "next": "^9.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
   "devDependencies": {
     "@types/node": "^14.0.1",
     "@types/react": "^16.9.35",
+    "@typescript-eslint/eslint-plugin": "^3.1.0",
+    "@typescript-eslint/parser": "^3.1.0",
+    "eslint": "^7.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.20.0",
     "postcss-preset-env": "^6.7.0",
+    "prettier": "^2.0.5",
     "tailwindcss": "^1.4.6",
     "typescript": "^3.9.2"
   }
