--- a/package.json
+++ b/package.json
@@ -6,25 +6,28 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint src/**/*.{js,ts,tsx} --fix"
+    "export": "next export",
+    "lint": "eslint src/**/*.{js,ts,tsx} --fix",
+    "deploy": "yarn run build && yarn run export && echo ''  > ./out/.nojekyll && yarn run gh-pages -d out -t"
   },
   "dependencies": {
-    "next": "^9.5.0",
+    "next": "^9.5.1",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
   "devDependencies": {
-    "@types/node": "^14.0.26",
+    "@types/node": "^14.0.27",
     "@types/react": "^16.9.43",
-    "@typescript-eslint/eslint-plugin": "^3.7.0",
-    "@typescript-eslint/parser": "^3.7.0",
+    "@typescript-eslint/eslint-plugin": "^3.7.1",
+    "@typescript-eslint/parser": "^3.7.1",
     "eslint": "^7.5.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.4",
+    "eslint-plugin-react": "^7.20.5",
+    "gh-pages": "^3.1.0",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.0.5",
-    "tailwindcss": "^1.5.2",
+    "tailwindcss": "^1.6.0",
     "typescript": "^3.9.7"
   }
 }
